--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="src/css/reset.css">
+  <link rel="stylesheet" href="src/css/global.css">
+  <link rel="stylesheet" href="src/css/main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
   <link rel="shortcut icon" type="image/png" sizes="32x32" href="src/images/favicon-32x32.png">
   <title>NFT preview card component</title>
 </head>
@@ -15,12 +21,23 @@
     </div>
 
     <div class="conteudo">
-      <h1>Equilibrium #3429</h1>
-      <p>Our Equilibrium collection promotes balance and calm.</p>
-      <h2>0.041 ETH</h2>
-      <p>3 days left</p>
-      <img src="src/images/image-avatar.png" alt="Avatar do Gustavo Fernandes">
-      <p>Creation of Gustavo Fernandes</p>
+      <div class="descricao-da-moeda">
+        <h1>Equilibrium #3429</h1>
+        <p>Our Equilibrium collection promotes balance and calm.</p>
+      </div>
+
+      <div class="valor-em-eth">
+        <img src="src/images/icon-ethereum.svg" alt="Ícone Ethereum">
+        <h2>0.041 ETH</h2>
+        <p>3 days left</p>
+      </div>
+      
+      <hr size="1">
+
+      <div class="assinatura">
+        <img src="src/images/image-avatar.png" alt="Jules Wyvern avatar">
+        <p>Creation of <strong>Jules Wyvern</strong></p>
+      </div>
     </div>
   </main>
 </body>
