Aprimorando o design do projeto

--- a/index.html
+++ b/index.html
@@ -27,11 +27,16 @@
       </div>
 
       <div class="valor-em-eth">
-        <img src="src/images/icon-ethereum.svg" alt="Ícone Ethereum">
-        <h2>0.041 ETH</h2>
-        <p>3 days left</p>
+        <ul>
+          <li class="info-eth">
+            <img src="src/images/icon-ethereum.svg" alt="Ícone do Ethereum">
+            <h2>0.041 ETH</h2>
+            <img src="src/images/icon-clock.svg" alt="Ícone de relógio">
+            <span> 3 days left</span>
+          </li>
+        </ul>
       </div>
-      
+
       <hr size="1">
 
       <div class="assinatura">
