Adicionando animações ao projeto

--- a/index.html
+++ b/index.html
@@ -16,32 +16,43 @@
 
 <body>
   <main>
-    <div class="imagem-principal">
-      <img src="src/images/image-equilibrium.jpg" alt="Equilibrium">
-    </div>
-
-    <div class="conteudo">
-      <div class="descricao-da-moeda">
-        <h1>Equilibrium #3429</h1>
-        <p>Our Equilibrium collection promotes balance and calm.</p>
+    <div>
+      <div class="imagens">
+        <div class="imagem-principal">
+          <img src="src/images/image-equilibrium.jpg" alt="Equilibrium">
+        </div>
+        <div class="vizualizacao">
+          <div class="fundo">
+          </div>
+          <div class="icone-olho">
+            <img src="src/images/icon-view.svg" alt="Ícone de Vizualização">
+          </div>
+        </div>
       </div>
 
-      <div class="valor-em-eth">
-        <ul>
-          <li class="info-eth">
-            <img src="src/images/icon-ethereum.svg" alt="Ícone do Ethereum">
-            <h2>0.041 ETH</h2>
-            <img src="src/images/icon-clock.svg" alt="Ícone de relógio">
-            <span> 3 days left</span>
-          </li>
-        </ul>
-      </div>
+      <div class="conteudo">
+        <div class="descricao-da-moeda">
+          <h1>Equilibrium #3429</h1>
+          <p>Our Equilibrium collection promotes balance and calm.</p>
+        </div>
 
-      <hr size="1">
+        <div class="valor-em-eth">
+          <ul>
+            <li class="info-eth">
+              <img src="src/images/icon-ethereum.svg" alt="Ícone do Ethereum">
+              <h2>0.041 ETH</h2>
+              <img src="src/images/icon-clock.svg" alt="Ícone de relógio">
+              <span> 3 days left</span>
+            </li>
+          </ul>
+        </div>
 
-      <div class="assinatura">
-        <img src="src/images/image-avatar.png" alt="Jules Wyvern avatar">
-        <p>Creation of <strong>Jules Wyvern</strong></p>
+        <hr size="1">
+
+        <div class="assinatura">
+          <img src="src/images/image-avatar.png" alt="Jules Wyvern avatar">
+          <p>Creation of <strong>Jules Wyvern</strong></p>
+        </div>
       </div>
     </div>
   </main>
