Finalizando estilização do projeto

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <main>
-    <div class="cartao-nft">
+    <section class="cartao-nft">
       <div class="imagens">
         <div class="imagem-principal">
           <img src="src/images/image-equilibrium.jpg" alt="Equilibrium">
@@ -55,7 +55,7 @@
           <p>Creation of <strong>Jules Wyvern</strong></p>
         </div>
       </div>
-    </div>
+    </section>
   </main>
 </body>
 
